--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>The Odin Project: HTML</title>
+</head>
+<body>
+    <!-- Comentario -->
+    <h1>Homepage</h1>
+    <a href="Compras.html" rel="noreferrer">Lista de Compras</a><br>
+    <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo" height="310" width="310">
+
+</body>
+</html>
